spade-tests/src/snapshots/spade_tests__const_generics__trait_and_const_int_in_where_clause_trait_bound_rhs.snap
---
source: spade-tests/src/const_generics.rs
---
trait X {}
fn test<T>()
    where T: { X + 1 }
{}


error: Expected `T` to be a type level integer
  ┌─ testinput:3:11
  │
2 │ fn test<T>()
  │         - `T` is a generic type
3 │     where T: { X + 1 }
  │           ^    ----- This is an integer constraint
  │           │     
  │           Generic type in generic integer constraint
  │
  = Try making the generic an integer
  │
2 │ fn test<#int T>()
  │         +++++
  = or an unsigned integer
  │
2 │ fn test<#uint T>()
  │         ++++++
